Allow escaping from ensures through next

Fixes [Bug #21001]